--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cart-item{
+  display:inline-flex;
+  margin:20px 10px;
 }
+
