--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,18 @@ body {
   display:inline-flex;
   margin:20px 10px;
 }
+.cart-item .right-block {
+  padding: 0 20px;
+}
+.cart-item-actions {
+  margin-top: 20px;
+}
+.action-icons {
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+.action-icons:hover {
+  cursor: pointer;
+}
 
